--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "HunterCaravanTabletUygulamasii"
 include ':app'
 
+include ':androidBluetoothSerial'
