--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,10 @@
             android:name=".fragments.GelismisUygulamaAyarlari"
             android:exported="false"
             android:screenOrientation="landscape" />
-
+        <activity
+            android:name=".fragments.AyarlarFragment"
+            android:exported="false"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".HomeScreen"
             android:exported="false"
