--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION">
+
+    </uses-permission>
 
     <application
         android:allowBackup="true"
@@ -26,7 +29,9 @@
         <activity
             android:name=".fragments.GelismisUygulamaAyarlari"
             android:exported="false"
-            android:screenOrientation="landscape" />
+            android:screenOrientation="landscape" >
+
+        </activity>
         <activity
             android:name=".fragments.AyarlarFragment"
             android:exported="false"
